--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </ul>
 
   <h2>📝 Final Write-Up (PDF)</h2>
-  <p><a href="writeup/DA_final.pdf" target="_blank">Download/View Final Project Report (PDF)</a></p>
+  <p><a href="writeup/da_final.pdf" target="_blank">Download/View Final Project Report (PDF)</a></p>
 
   <h2>📂 Dataset</h2>
   <p><a href="data/ufc_men.xlsx" download>Download Excel Dataset (ufc_men.xlsx)</a></p>
